Jul 27 2004  devel  Fixed Imagemagick 6.x (again)
Jul 23 2004  devel  Added support for new Cisco drivers (see download page)
                    Added support for the new GPL drivers for admtek
                    Tweaked admtek support to not fetch channel if interface
                     is down.
                    Fixed attempts to restore mode or channel when the 
                     original mode/channel was unavailable
Jul 14 2004  devel  Merged patch from Sebastian to clean up ipw2100 behavior a
                     bit more
Jul 12 2004  devel  Fixed Imagemagick support for 6.x
Jun 25 2004  devel  Removed net/bpf.h since it isn't needed and isn't present
                     in some systems
Jun 18 2004  devel  Changed string = char * to string = string(char *) since
                     cygwin seems to have broken constructors for that
                     (thanks JM)
                    Added checks to hopefully bypass fetching channels from
                     down interfaces under hostap which led to failures from
                     driver crankiness
Jun 14 2004  devel  Added channel to alert tracking and protocol
Jun 13 2004  devel  Merged fix from Million to repair delta calculations and
                     fix playing the correct sound for traffic
Jun 10 2004  devel  Expanded alert protocol to carry source, dest, bssid, and
                     other mac address fields for better programatic handling
                     of alerts through external clients
Jun 09 2004  devel  Added BSS timestamp spoof detection - BSSTIMESTAMP alert.
                    Created "None" packet source for default config to stem
                     the new people being confused with cisco errors
                    Modified packetsource unmonitor_ code to not print warnings
                     about not leaving monitor mode cleanly if not relevant for
                     all active packetsources (ie, pcapfile and drones don't